crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__access_global_variable_that_is_declared_later.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/access_global_variable_that_is_declared_later.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var x (global @3) (global-by-name y))
   (print (global x @3))
   (var y (global @4) 42.0))

----- stderr -----
