crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__add_bound_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/add_bound_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class C (global @3) ∅
      (method f [(local this @0)] []
         (block)))
   (var f (global @4) (attr (call +4 (global C @3)) f))
   (expr (+ (global f @4) 42.0)))

----- stderr -----
