crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__assign_to_global_variable_in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/assign_to_global_variable_in_function.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @1) 27.0)
   (fun f (global @2) [] []
      (block
         (expr (= (global a @1) 42.0))))
   (print (global a @1))
   (print (call +3 (global f @2)))
   (print (global a @1)))

----- stderr -----
